<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/dp_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_about_call"
                android:textColor="#FF333333"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/dp_4" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_close" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lly_good"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/up_selectable_bg"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_good"
                    android:src="@drawable/up_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#222222"
                    android:textSize="@dimen/text_size_18"
                    android:text="@string/good" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_bad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dp_5"
                android:background="@drawable/down_selectable_bg"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/down_icon"
                    android:layout_marginEnd="@dimen/dp_8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#222222"
                    android:textSize="@dimen/text_size_18"
                    android:text="@string/bad" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_thx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:textColor="#333333"
            android:layout_gravity="center"
            android:visibility="gone"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/icon_haha"
            android:text="感谢您的评价～" />

        <LinearLayout
            android:id="@+id/lly_more_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF333333"
                android:textSize="@dimen/text_size_16"
                android:text="@string/what_issue_happen" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/edt_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_d9d9db_bg"
                android:layout_marginBottom="@dimen/dp_12"
                android:hint="@string/other_question"
                android:textColorHint="#999999"
                android:textSize="@dimen/text_size_14"
                android:textColor="#FF333333"
                android:maxLength="1000"
                android:lines="3" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/submit"
                android:textSize="@dimen/text_size_16"
                android:background="@drawable/join_button_border" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
